--- a/adventures-and-battles.html
+++ b/adventures-and-battles.html
@@ -13,7 +13,7 @@
     <p>Based on his experiences in the Battle of Bojo </p>
     <p>He wrote his famous book,
         <a href="background-info.html" rel="external" title="The Art Of War"><em>The Art Of War </em></a></p><img
-        src="/images/sun tzu armoured.jpg" alt="A sculpture of Sun Tzu" width="300" height="500" />
+        src="/sun tzu armoured.jpg" alt="A sculpture of Sun Tzu" width="300" height="500" />
     <p><em class='caption'>A scultpture of Sun Tzu</em></p>
 </body>
 
