--- a/background-info.html
+++ b/background-info.html
@@ -12,14 +12,14 @@
         Sun Tzu, a man of myth and legend
     </h2>
 
-    <img src="/images/sun tzu.jpg" alt="a picture of Sun Tzu" />
+    <img src="/sun tzu.jpg" alt="a picture of Sun Tzu" />
     <p>Sun Tzu was a general in the Chinese Army as well as a philosopher and strategist. He wrote the best selling book
         that has been around for 2500 years. It is studided in depth in universities around the world analysing each
         page of the translated 260
         pages
     </p>
 
-    <img src="/images/the art of war.jpg" alt="a picture of the book, The Art of War" />
+    <img src="/the art of war.jpg" alt="a picture of the book, The Art of War" />
     <p><em>The Art Of War, a bestselling book for over 2500 years</em></p>
     <p id='extras'>
         For more,
