--- a/tales-of-his-life.html
+++ b/tales-of-his-life.html
@@ -18,7 +18,7 @@
         that he was active as a general and strategist,
         serving King Helü of Wu in the late sixth century BC, beginning around 512 BC.
     </p>
-    <img src="/suntzu-770x470.jpg" alt="a picture of Sun Tzu, ready for battle" width="770" height="470" />
+    <img src="suntzu-770x470.jpg" alt="a picture of Sun Tzu, ready for battle" width="770" height="470" />
     <em class='caption'>A Young Sun Tzu</em>
     <h3>
         Life
