i added 'stuff' to the text

--- a/tales-of-his-life.html
+++ b/tales-of-his-life.html
@@ -31,7 +31,7 @@
         Records of the Grand Historian
     </p>
     <p id='extras'>
-        For even more,
+        For even more stuff,
     </p>
     <p>
         <a href="adventures-and-battles.html" rel="external" title="The Art Of War">
