--- a/tales-of-his-life.html
+++ b/tales-of-his-life.html
@@ -33,7 +33,9 @@
     <p id='extras'>
         For even more,
     </p>
-    <p>
+    <header>
+        <nav>
+            <ul>
         <a href="adventures-and-battles.html" rel="external" title="The Art Of War">
             <em>
                 Adventures and Battles
@@ -47,7 +49,9 @@
                 Background Info
             </em>
         </a>
-    </p>
+    </ul>
+</nav>
+    </header>
 </body>
 
 </html>
