--- a/background-info.html
+++ b/background-info.html
@@ -24,21 +24,24 @@
     <p id='extras'>
         For more,
     </p>
-    <p>
+    <header>
+        <nav>
+            <ul>
         <a href="adventures-and-battles.html" rel="external" title="The Art Of War">
             <em>
                 Adventures and Battles
             </em>
         </a>
-    </p>
-    <p>
 
         <a href="tales-of-his-life.html" rel="external" title="The Art Of War">
             <em>
                 Tales of His Life
             </em>
         </a>
-    </p>
+    </ul>
+</nav>
+</header>
+    
 </body>
 
 </html>
