--- a/adventures-and-battles.html
+++ b/adventures-and-battles.html
@@ -7,12 +7,30 @@
 </head>
 
 <body>
+    <header>
+        <h1>Sun Tzu</h1>
+        <nav>
+            <ul>
+                <a href="background-info.html" rel="external" title="The Art Of War">
+                    <em>
+                        Adventures and Battles
+                    </em>
+                </a>
+
+                <a href="tales-of-his-life.html" rel="external" title="The Art Of War">
+                    <em>
+                        Tales of His Life
+                    </em>
+                </a>
+            </ul>
+        </nav>
+    </header>
     <h2>Sun Tzu, the Military Tactian</h2>
     <p>Sun Tzu has fought in the Battle of Bojo. </p>
     <p>Though some others who were at the Battle of Bojo, did not mention the presence of Sun Tzu. </p>
     <p>Based on his experiences in the Battle of Bojo </p>
     <p>He wrote his famous book,
-        <a href="background-info.html" rel="external" title="The Art Of War"><em>The Art Of War </em></a></p><img
+        <a title="The Art Of War"><em>The Art Of War </em></a></p><img
         src="sun tzu armoured.jpg" alt="A sculpture of Sun Tzu" width="300" height="500" />
     <p><em class='caption'>A scultpture of Sun Tzu</em></p>
 </body>
