--- a/background-info.html
+++ b/background-info.html
@@ -8,10 +8,8 @@
 </head>
 
 <body>
-    <h2>
-        Sun Tzu, a man of myth and legend
-    </h2>
     <header>
+        <h1>Sun Tzu</h1>
         <nav>
             <ul>
                 <a href="adventures-and-battles.html" rel="external" title="The Art Of War">
@@ -19,7 +17,9 @@
                         Adventures and Battles
                     </em>
                 </a>
-
+<p>
+     
+</p>
                 <a href="tales-of-his-life.html" rel="external" title="The Art Of War">
                     <em>
                         Tales of His Life
@@ -28,6 +28,9 @@
             </ul>
         </nav>
     </header>
+    <h2>
+        Sun Tzu, a man of myth and legend
+    </h2>
     <img src="sun tzu.jpg" alt="a picture of Sun Tzu" />
     <p>Sun Tzu was a general in the Chinese Army as well as a philosopher and strategist. He wrote the best selling book
         that has been around for 2500 years. It is studided in depth in universities around the world analysing each
@@ -37,11 +40,7 @@
 
     <img src="the art of war.jpg" alt="a picture of the book, The Art of War" />
     <p><em>The Art Of War, a bestselling book for over 2500 years</em></p>
-    <p id='extras'>
-        For more,
-    </p>
-    
 
-</body>
+</body> 
 
 </html>
