--- a/tales-of-his-life.html
+++ b/tales-of-his-life.html
@@ -9,27 +9,27 @@
 </head>
 
 <body>
+    <header>
+        <h1>Sun Tzu</h1>
+        <nav>
+            <ul>
+                <a href="background-info.html" rel="external" title="The Art Of War">
+                    <em>
+                        Adventures and Battles
+                    </em>
+                </a>
+
+                <a href="tales-of-his-life.html" rel="external" title="The Art Of War">
+                    <em>
+                        Tales of His Life
+                    </em>
+                </a>
+            </ul>
+        </nav>
+    </header>
     <h2>
         Sun Tzu, Tales of his Life
     </h2>
-    <header>
-        <nav>
-            <ul>
-        <a href="adventures-and-battles.html" rel="external" title="The Art Of War">
-            <em>
-                Adventures and Battles
-            </em>
-        </a>
-    
-
-        <a href="background-info.html" rel="external" title="The Art Of War">
-            <em>
-                Background Info
-            </em>
-        </a>
-    </ul>
-</nav>
-    </header>
     <p>Sun Tzu was a general in the Chinese Army
         He had a very eventful life and Sun Tzu was born in the late Spring and Autumn </p>
     <p>period and
@@ -55,3 +55,4 @@
 </body>
 
 </html>
+
