--- a/adventures-and-battles.html
+++ b/adventures-and-battles.html
@@ -13,7 +13,7 @@
             <ul>
                 <a href="background-info.html" rel="external" title="The Art Of War">
                     <em>
-                        Adventures and Battles
+                        Background Info
                     </em>
                 </a>
                 <p>   </p>
