--- a/tales-of-his-life.html
+++ b/tales-of-his-life.html
@@ -15,7 +15,7 @@
             <ul>
                 <a href="background-info.html" rel="external" title="The Art Of War">
                     <em>
-                        Adventures and Battles
+                        Background Info
                     </em>
                 </a>
                 <p>  </p>
