--- a/tales-of-his-life.html
+++ b/tales-of-his-life.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <h1>Sun Tzu</h1>
+        <img src="2020_05_sun_tzu.jpg" />
         <nav>
             <ul>
                 <a href="background-info.html" rel="external" title="The Art Of War">
