--- a/adventures-and-battles.html
+++ b/adventures-and-battles.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Sun Tzu</h1>
-        <img src="2020_05_sun_tzu.jpg" />
+        <img src="2020_05_sun_tzu.jpg" width="250" height="100"/>
         <nav>
             <ul>
                 <a href="background-info.html" rel="external" title="The Art Of War">
