--- a/background-info.html
+++ b/background-info.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Sun Tzu</h1>
-        <img src="2020_05_sun_tzu.jpg" />
+        <img src="2020_05_sun_tzu.jpg" width="250" height="100" />
         <nav>
             <ul>
                 <a href="adventures-and-battles.html" rel="external" title="The Art Of War">
